Add number ranges counters & tests.